final de ejercicio generador de excusa

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,9 @@
 @import "bootstrap/dist/css/bootstrap.min.css";
 
-body{
-    background: blue;
+.excuse{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 32px;
 }
